    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------

??/??/??

    * 0.8.0 kain88-de, dotsdl, orbeckst

API Changes
    * Group object no longer supported; removed (#130)


Enhancements
    

Fixes



Changes


Doc Updates


02/21/17

    * 0.7.1 kain88-de, dotsdl

API Changes


Enhancements
    

Fixes
    * Raise exception if wrong tag type is added (Issue #123)
    * allow addings tags from tuples (Issue #122)

Changes


Doc Updates



07/13/16 dotsdl, gabrielelanaro, kain88-de, sseyler

    * 0.7.0

API Changes

    * ``Bundle.trees`` -> ``Bundle.view`` and ``View.treants`` ->
      ``View.bundle``; change was made to remove ambiguity of 
      ``Bundle.trees`` in light of ``View.trees``, and to make clear
      that these properties serve as transformations in some way.

Enhancements
    
    * ``Tree.rsync`` method added that allows syncing of Trees
      and Treants to and from remote locations and filesystems
    * ``View.loc``, ``Bundle.loc``, ``Tree.loc`` pandas-like semantics
      added for accessing subtrees.
    * More complete tests for ``AggTags``


Fixes
    
    * Bundles and Views obtained from other Bundles, Views, Trees, or Treants
      automatically get all limbs of the object they were obtained from;
      set operations between Views/Bundles will give unions of their attached
      limbs
    * ``datreant.core.discover`` no longer traverses directories beyond given
      depth, or beyond treantdepth. These parameters now work as expected. #45
    * ``AggCategories.groupby`` preserves key order


Changes

    * Switched from ``pathlib`` to ``pathlib2`` as a dependency for backwards
      compatibility with python < 3.4.

Doc Updates

    * Added conda package installation instructions.


